--- a/ros2_ws/src/bur_gz/package.xml
+++ b/ros2_ws/src/bur_gz/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>bur_gz/name>
+  <name>bur_gz</name>
   <version>0.0.0</version>
   <description>This covers all of the simulation utilities in BUR</description>
   <maintainer email="theprabab@gmail.com">root</maintainer>
