--- a/ros2_ws/src/bur_launch/CMakeLists.txt
+++ b/ros2_ws/src/bur_launch/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(bur_auv)
+project(bur_launch)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -10,7 +10,7 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
-find_package(bur_control REQUIRED)
+find_package(bur_controller REQUIRED)
 find_package(bur_msgs REQUIRED)
 find_package(bur_rov REQUIRED)
 find_package(bur_sensors REQUIRED)
