--- a/ros2_ws/src/bur_launch/package.xml
+++ b/ros2_ws/src/bur_launch/package.xml
@@ -9,7 +9,7 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>bur_control</depend>
+  <depend>bur_controller</depend>
   <depend>bur_msgs</depend>
   <depend>bur_rov</depend>
   <depend>bur_sensors</depend>
