--- a/ros2_ws/src/bur_rov/CMakeLists.txt
+++ b/ros2_ws/src/bur_rov/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(bur_launch)
+project(bur_rov)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -12,10 +12,6 @@ find_package(ament_cmake REQUIRED)
 # find_package(<dependency> REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(bur_rov_msgs REQUIRED)
-find_package(bur_rov_sensors REQUIRED)
-find_package(controller REQUIRED)
-find_package(thruster_manager REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
@@ -24,10 +20,15 @@ find_package(nav_msgs REQUIRED)
 # find_package(state_estimation REQUIRED)
 # find_package(controller REQUIRED)
 
+find_package(bur_msgs REQUIRED)
+find_package(bur_sensors REQUIRED)
+find_package(bur_controller REQUIRED)
+find_package(bur_thruster_manager REQUIRED)
+
 include_directories(include/${PROJECT_NAME})
 
 add_executable(joy_command src/joy_command.cpp)
-ament_target_dependencies(joy_command tf2 tf2_geometry_msgs nav_msgs rclcpp sensor_msgs bur_rov_msgs joy)
+ament_target_dependencies(joy_command tf2 tf2_geometry_msgs nav_msgs rclcpp sensor_msgs bur_msgs joy)
 
 add_executable(open_loop src/open_loop_go_burr.cpp)
 ament_target_dependencies(open_loop rclcpp sensor_msgs nav_msgs geometry_msgs)
