--- a/ros2_ws/src/bur_rov/package.xml
+++ b/ros2_ws/src/bur_rov/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>bur_launch</name>
+  <name>bur_rov</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="grape@todo.todo">grape</maintainer>
@@ -17,10 +17,11 @@
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>nav_msgs</depend>
-  <depend>controller</depend>
-  <depend>thruster_manager</depend>
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
+
+  <depend>bur_controller</depend>
+  <depend>bur_thruster_manager</depend>
 
   <depend>bur_sensors</depend>
   <depend>bur_msgs</depend>
