--- a/ros2_ws/src/gnc/bur_autonomy/CMakeLists.txt
+++ b/ros2_ws/src/gnc/bur_autonomy/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16.3) # version on Ubuntu Focal
-project(bur_auv_planner)
+project(bur_autonomy)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
