--- a/ros2_ws/src/gnc/bur_thruster_manager/CMakeLists.txt
+++ b/ros2_ws/src/gnc/bur_thruster_manager/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(thruster_manager)
+project(bur_thruster_manager)
 
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
