--- a/ros2_ws/src/bur_gz/config/thruster_config.yaml
+++ b/ros2_ws/src/bur_gz/config/thruster_config.yaml
@@ -1,36 +1,6 @@
-cmd_thruster1:
-    type: std_msgs/msg/Float64
-    thrust:
-        min: -30
-        max: 30
-        to: data
-cmd_thruster2:
-    type: std_msgs/msg/Float64
-    thrust:
-        min: -30
-        max: 30
-        to: data
-cmd_thruster3:
-    type: std_msgs/msg/Float64
-    thrust:
-        min: -30
-        max: 30
-        to: data
-cmd_thruster4:
-    type: std_msgs/msg/Float64
-    thrust:
-        min: -30
-        max: 30
-        to: data
-cmd_thruster5:
-    type: std_msgs/msg/Float64
-    thrust:
-        min: -30
-        max: 30
-        to: data
-cmd_thruster6:
-    type: std_msgs/msg/Float64
-    thrust:
-        min: -30
-        max: 30
-        to: data
+controller_manager:
+  ros__parameters:
+    update_rate: 1000
+
+    joint_broad:
+      type: joint_state_broadcaster/JointStateBroadcaster
